clusters/apps/default/media/jackett.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jackett
  namespace: media
  labels:
    app: jackett
spec:
  replicas: 1 
  selector:
    matchLabels:
      app: jackett
  template:
    metadata:
      labels:
        app: "jackett"
    spec:
      volumes:
        - name: config
          configMap:
            name: jackett-config
        - name: indexers
          configMap:
            name: jackett-indexers
      containers:
      - name: jackett
        image: ghcr.io/linuxserver/jackett:latest
        ports: 
        - containerPort: 9117
        volumeMounts:
          - mountPath: /config/Jackett/Indexers
            name: indexers
          - mountPath: /config/Jackett/ServerConfig.json
            name: config
            subPath: ServerConfig.json
---
apiVersion: v1
kind: Service
metadata:
  name: jackett
  namespace: media
spec:
  selector:
    app: "jackett"
  type: LoadBalancer
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 9117
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jackett
  namespace: media
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - "index.home.jrbeverly.dev"
      secretName: "index-tls"
  rules:
  - host: "index.home.jrbeverly.dev"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: jackett
            port:
              number: 80
