clusters/apps/default/media/radarr.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: radarr
  namespace: media
  labels:
    app: radarr
spec:
  replicas: 1 
  selector:
    matchLabels:
      app: radarr
  template:
    metadata:
      labels:
        app: "radarr"
    spec:
      volumes:
        - name: media-storage
          persistentVolumeClaim:
            claimName: media-claim
        - name: radarr-config
          persistentVolumeClaim:
            claimName: radarr-config
      securityContext:
        fsGroup: 911
      containers:
      - name: radarr
        image: ghcr.io/linuxserver/radarr:latest
        ports: 
        - containerPort: 7878
        volumeMounts:
          - mountPath: "/media"
            name: media-storage
          - mountPath: "/config"
            name: radarr-config
---
apiVersion: v1
kind: Service
metadata:
  name: radarr
  namespace: media
spec:
  selector:
    app: "radarr"
  type: LoadBalancer
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 7878
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: radarr
  namespace: media
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - "movies.home.jrbeverly.dev"
      secretName: "movies-tls"
  rules:
  - host: "movies.home.jrbeverly.dev"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: radarr
            port:
              number: 80
