clusters/apps/default/media/sonarr.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarr
  namespace: media
  labels:
    app: sonarr
spec:
  replicas: 1 
  selector:
    matchLabels:
      app: sonarr
  template:
    metadata:
      labels:
        app: "sonarr"
    spec:
      volumes:
        - name: media-storage
          persistentVolumeClaim:
            claimName: media-claim
        - name: sonarr-config
          persistentVolumeClaim:
            claimName: sonarr-config
      securityContext:
        fsGroup: 911
      containers:
      - name: sonarr
        image: ghcr.io/linuxserver/sonarr:latest
        ports: 
        - containerPort: 8989
        volumeMounts:
          - mountPath: "/media"
            name: media-storage
          - mountPath: "/config"
            name: sonarr-config
---
apiVersion: v1
kind: Service
metadata:
  name: sonarr
  namespace: media
spec:
  selector:
    app: "sonarr"
  type: LoadBalancer
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 8989
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sonarr
  namespace: media
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - "tv.home.jrbeverly.dev"
      secretName: "tv-tls"
  rules:
  - host: "tv.home.jrbeverly.dev"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sonarr
            port:
              number: 80
