clusters/apps/default/media/transmission.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: transmission
  namespace: media
  labels:
    app: transmission
spec:
  replicas: 1 
  selector:
    matchLabels:
      app: transmission
  template:
    metadata:
      labels:
        app: "transmission"
    spec:
      volumes:
        - name: media-storage
          persistentVolumeClaim:
            claimName: media-claim
        - name: transmission-config
          persistentVolumeClaim:
            claimName: transmission-config
      securityContext:
        fsGroup: 911
      containers:
      - name: transmission
        image: docker.io/haugene/transmission-openvpn:latest
        ports: 
        - containerPort: 9091
        volumeMounts:
          - mountPath: "/downloads"
            name: media-storage
          - mountPath: "/config"
            name: transmission-config
---
apiVersion: v1
kind: Service
metadata:
  name: transmission
  namespace: media
spec:
  selector:
    app: "transmission"
  type: LoadBalancer
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 9091
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: transmission
  namespace: media
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - "download.home.jrbeverly.dev"
      secretName: "download-tls"
  rules:
  - host: "download.home.jrbeverly.dev"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: transmission
            port:
              number: 80
